# extendable-assets

./: Cargo.toml  README.md  rustfmt.toml
src/: asset.rs  asset_type.rs  filesystem.rs  lib.rs  loader.rs  manager.rs  saver.rs  test.rs  third_party.rs  util.rs
src/asset/: data.rs  id.rs  mod.rs  serialize.rs
src/asset/serialize/: backend.rs  compression.rs  data.rs  json_backend.rs  mod.rs  msgpack_backend.rs
src/filesystem/: embed.rs  fallback.rs  mod.rs  native.rs
src/util/: mod.rs  u64_hash.rs
tests/: test_asset.rs  test_common.rs  test_manager.rs
tests/common/: context.rs  mod.rs  string.rs
tests/test_data_0/: asset.json
