[package]
name = "extendable-assets"
description = "Asset framework for graphics and games"
keywords = ["asset", "graphics", "framework", "game"]
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
downcast-rs = "2.0"
parking_lot = "0.12"
async-trait = "0.1.89"
xxhash-rust = { version = "0.8.15", features = ["const_xxh3", "xxh3"] }

[dev-dependencies]
pollster = "0.4.0"
rand = "0.9.2"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["fs-native"]
fs-native = []
