[package]
name = "extendable-assets"
description = "Asset framework for graphics and games"
keywords = ["asset", "graphics", "framework", "game"]
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
downcast-rs = "2.0"
parking_lot = "0.12"
async-trait = "0.1"
xxhash-rust = { version = "0.8", features = ["const_xxh3", "xxh3"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
rust-embed = { version = "8.11", optional = true }
rand = "0.10"
serde_json = { version = "1.0", optional = true }
rmp-serde = { version = "1.3", optional = true }
flate2 = { version = "1.1", features = ["zlib-rs"], default-features = false }

[dev-dependencies]
pollster = "0.4"
serde_json = "1.0"
serde_test = "1.0"
rust-embed = { version = "8.11", features = [
  "interpolate-folder-path",
  "debug-embed",
] }

[features]
default = ["fs-native", "fs-embed", "backend-json", "backend-msgpack"]
fs-native = []
fs-embed = ["rust-embed"]
backend-json = ["serde_json"]
backend-msgpack = ["rmp-serde"]

rust-embed = ["dep:rust-embed"]
serde_json = ["dep:serde_json"]
rmp-serde = ["dep:rmp-serde"]
